<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/informatika"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ImageIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/usk"
        android:contentDescription="@string/logo_unsyiah" />

    <Button
        android:id="@+id/btn_ganti"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/ImageIcon"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btn_asset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:text="@string/asset"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/ImageIcon"
        app:layout_constraintTop_toBottomOf="@id/btn_ganti"
        android:onClick="gambarAset"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/ImageIcon">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="18sp" />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>